fixed multiple lighthouse issues and seo tags

--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -47,7 +47,7 @@ footer.footer .social_media a {
 }
 footer.footer .social_media a:hover {
 	color: var(--text-primary);
-	scale: 1.5;
+	transform: scale(1.5);
 	border-bottom: none;
 }
 @keyframes spinning {
