--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -76,7 +76,7 @@ section.contact .contacts .contact_info img {
 	width: 40px;
 }
 section.contact .contacts .contact_info a {
-	color: var(--text-secondary);
+	color: #000;
 	font-weight: 500;
 }
 section.contact .contacts .contact_info:hover {
