fixed negative margin at the end of footer

--- a/styles/ProjectSlug.module.css
+++ b/styles/ProjectSlug.module.css
@@ -2,7 +2,7 @@
 	margin-top: 0;
 	width: 85%;
 	margin-inline: auto;
-	overflow: hidden;
+	/* overflow: hidden; */
 	min-height: calc(100vh - 150px);
 }
 @media screen and (max-width: 1000px) {
