added robots and sitemap and added nofollow referals to all external links

--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -79,6 +79,10 @@ section.contact .contacts .contact_info a {
 	color: #000;
 	font-weight: 500;
 }
+section.contact .contacts .contact_info a[href^="mailto"] {
+	unicode-bidi: bidi-override;
+	direction: rtl;
+}
 section.contact .contacts .contact_info:hover {
 	background-color: var(--pink);
 }
