--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -27,6 +27,9 @@ section.projects::before {
 	section.projects {
 		padding-top: 0;
 	}
+	section.projects .projects_container {
+		padding-top: 0;
+	}
 	section.projects::before {
 		content: none;
 	}
