--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -142,6 +142,10 @@ section.contact .form form button {
 section.contact .form form button:hover {
 	filter: brightness(0.8);
 }
+.error {
+	color: rgb(161, 48, 48);
+	font-size: 12px;
+}
 @media (max-width: 740px) {
 	section.contact .form form {
 		width: 100%;
