fixed sitemap and some other css errors

--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -112,11 +112,10 @@ section.contact .form form {
 }
 section.contact .form form input,
 section.contact .form form textarea {
-	width: 600px;
+	/* width: 600px; */
 	padding: 10px 20px;
 	border-radius: 16px;
 	outline: none;
-	border: none;
 	background: none;
 	border: 1px solid var(--text-secondary);
 	color: var(--text-primary);
