--- a/styles/animated.css
+++ b/styles/animated.css
@@ -1,15 +1,22 @@
 .animated {
 	-webkit-animation-duration: 1s;
+	-moz-animation-duration: 1s;
+	-o-animation-duration: 1s;
 	animation-duration: 1s;
 	-webkit-animation-fill-mode: both;
+	-o-animation-fill-mode: both;
 	animation-fill-mode: both;
 }
 .animated.infinite {
 	-webkit-animation-iteration-count: infinite;
+	-moz-animation-iteration-count: infinite;
+	-o-animation-iteration-count: infinite;
 	animation-iteration-count: infinite;
 }
 .animated.hinge {
 	-webkit-animation-duration: 2s;
+	-o-animation-duration: 2s;
+	-moz-animation-duration: 2s;
 	animation-duration: 2s;
 }
 .animated.bounceIn,
@@ -17,9 +24,35 @@
 .animated.flipOutX,
 .animated.flipOutY {
 	-webkit-animation-duration: 0.75s;
+	-moz-animation-duration: 0.75s;
+	-o-animation-duration: 0.75s;
 	animation-duration: 0.75s;
 }
 @-webkit-keyframes fadeInLeft {
+	0% {
+		opacity: 0;
+		-webkit-transform: translate3d(-100%, 0, 0);
+		transform: translate3d(-100%, 0, 0);
+	}
+	to {
+		opacity: 1;
+		-webkit-transform: none;
+		transform: none;
+	}
+}
+@-o-keyframes fadeInLeft {
+	0% {
+		opacity: 0;
+		-webkit-transform: translate3d(-100%, 0, 0);
+		transform: translate3d(-100%, 0, 0);
+	}
+	to {
+		opacity: 1;
+		-webkit-transform: none;
+		transform: none;
+	}
+}
+@-moz-keyframes fadeInLeft {
 	0% {
 		opacity: 0;
 		-webkit-transform: translate3d(-100%, 0, 0);
@@ -45,6 +78,8 @@
 }
 .fadeInLeft {
 	-webkit-animation-name: fadeInLeft;
+	-moz-animation-name: fadeInLeft;
+	-o-animation-name: fadeInLeft;
 	animation-name: fadeInLeft;
 }
 
@@ -74,6 +109,8 @@
 }
 .fadeInRight {
 	-webkit-animation-name: fadeInRight;
+	-moz-animation-name: fadeInRight;
+	-o-animation-name: fadeInRight;
 	animation-name: fadeInRight;
 }
 
@@ -103,6 +140,8 @@
 }
 .fadeInUp {
 	-webkit-animation-name: fadeInUp;
+	-moz-animation-name: fadeInUp;
+	-o-animation-name: fadeInUp;
 	animation-name: fadeInUp;
 }
 
@@ -165,8 +204,12 @@
 	}
 }
 .flipInX {
-	-webkit-backface-visibility: visible !important;
-	backface-visibility: visible !important;
+	-webkit-backface-visibility: visible;
+	-moz-backface-visibility: visible;
+	-o-backface-visibility: visible;
+	backface-visibility: visible;
 	-webkit-animation-name: flipInX;
+	-moz-animation-name: flipInX;
+	-o-animation-name: flipInX;
 	animation-name: flipInX;
 }
